<resources>
    <string name="app_name">Second_Test_App</string>
    <string name="approve">Approve</string>
    <string name="disapprove">Disapprove</string>
    <string name="indifferent">Indifferent</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- Home -->
    <string name="home">Home</string>
    <string name="home_speak_text">Bills</string>
    <string name="home_rep_text">Representatives</string>
    <string name="home_about_text">About Us</string>
    <string name="home_register">Register</string>
    <string name="home_sign_in_other">Other Email Address</string>
    <string name="headline">Reclaim your voice in our democracy!</string>

    <!-- Signin Dialog -->
    <string name="dialog_name">Sign in with email</string>

    <!--Speak -->
    <string name="speak">Speak</string>
    <string name="speak_bill_name">H.R. 3388 a.k.a SELF DRIVE Act</string>
    <string name="speak_bill_details">
        "The goal of the bill is to formalize the federal government's role in regulating the "
        "safety of highly automated vehicles ( H.A.V.s, think self-driving cars). \n\n"

        "Sponsor(s): Robert Lotta (R, Ohio, 5th District) \n\n\n"
        "Key Features \n\n"
        "    • Emphasizes that states cannot enforce regulations or safety standards on H.A.V.s "
        "that conflict with federal government's regulations \n\n"
        "    • Affirms a state's right to regulate the sale / distribution of H.A.V \n\n"
        "    • Reiterates that drivers of H.A.V.s assume liability in the same way as if they were "
        "driving a regular motor vehicle \n\n"
        "    • Imposes more rigorous safety reporting standards for H.A.V. manufacturers including "
        "a focus on cybersecurity to prevent systems from being hacked \n\n"
        "    • Authorizes the creation of a Highly Automated Vehicle Advisory Council responsible "
        "for gathering information, developing technological advice, and presenting recommendations \n\n"
        "    • Requires manufacturers to specify privacy policies regarding data collected from H.A.V.s \n\n"
    </string>
    <string name="speak_details">The Details</string>
    <string name="speak_header2">Do you approve or disapprove this bill?</string>
    <string name="speak_search_hint">Enter a bill name</string>


    <!-- Rep -->
    <string name="rep">Your Representative</string>
    <string name="rep_name">Bobby Rush</string>
    <string name="rep_your_rep">Your Representative</string>
    <string name="rep_district">Illinois 1st District</string>
    <string name="rep_subhead1">Do You Approve or Disapprove of the Way Bobby Rush Has Done His Job?</string>
    <string name="rep_subhead2">Representative Bio</string>
    <string name="rep_subhead3">Latest Votes</string>
    <string name="rep_subhead4">Donate Now</string>
    <string name="rep_bio">
        "Elected Office: \n"
        "    • US House of Representatives, 1993-Present \n"
        "    • US Army, 1963-1968 \n\n"
        "Education: \n
        "    • Master\'s, Political Science, University of Illinois at Chicago \n"
        "    • Master\'s, Divinity, McCormick Theological Seminary \n"
        "    • Bachelor\'s, Political Science, Roosevelt University \n\n"
        "Personal: \n"
        "    • Married to wife, Carolyn; 7 children \n"
        "    • Attends Beloved Community Church of God in Christ, Chicago, IL"
    </string>
    <string name="rep_vote_1">Self-Drive Act (co-sponsor)</string>
    <string name="rep_vote_2">Register of Copyrights Selection &amp; Accountability Act</string>
    <string name="rep_vote_3">Control Unlawful Fugitive Felons Act</string>
    <string name="rep_date_1">09.06.2017</string>
    <string name="rep_date_2">04.26.2017</string>
    <string name="rep_date_3">09.28.2017</string>
    <string name="rep_donate_description">If you support your Representative, you can use the link below to donate to their re-election campaign</string>


    <!-- About -->
    <string name="about">About</string>
    <string name="about_subhead1">Our Team</string>
    <string name="about_name_1">John R. Schultz</string>
    <string name="about_name_2">Cristen A. Bublitz</string>
    <string name="about_name_3">Jordan A. Gunter</string>
    <string name="about_bio1">
        "Political Science student at the University of Chicago. While in college founded a"
        " non-profit consulting firm that aided non-profits on the South-side of Chicago and in"
        " Guatemala. John also has experience working in the Obama White House and the United States"
        " State Department."
    </string>
    <string name="about_bio2">
        "Political Science student at the University of Chicago. Created a product-based start-up"
        " while in High School that was featured in the Kaufman Foundation's Summer Catalog. Also"
        " has marketing and venture capital experience"
    </string>
    <string name="about_bio3">Bio3</string>


    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_speak">SpeakActivity</string>
    <string name="title_activity_representative">RepresentativeActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="search">Search</string>
    <string name="title_activity_search">SearchResultsActivity</string>
    <string name="invalid_lat_long_used">The latitude and/or longitude values that are provided in the Location object are invalid.</string>
    <string name="service_not_available">The background geocoding service is not available due to a network error or IO exception.</string>
    <string name="no_address_found">The geocoder can\'t find an address for the given latitude/longitude</string>
    <string name="address_found">Address found</string>
    <string name="no_geocoder_available">No geocoder available. Cannot fetch address</string>

    <!-- Debug -->
    <string name="sign_in_success">Signed In</string>
    <string name="not_sign_in">Not signed in</string>
    <string name="sign_in_error">Error signing in</string>
</resources>
