<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Home   -->
    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        app:showAsAction="never"/>


    <!-- Representative -->
    <item
        android:id="@+id/action_rep"
        android:title="@string/rep"
        app:showAsAction="never"/>

    <!-- About -->
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>

    <!--search -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>


    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>