<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="64dp"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jordangunter.second_test_app.RepresentativeActivity"
    tools:showIn="@layout/activity_representative">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/yourRep"
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/rep_your_rep"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.88"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rep_pic"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/rep_name"
            app:layout_constraintEnd_toStartOf="@+id/yourRep"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/bobby_rush_photo" />

        <TextView
            android:id="@+id/repName"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rep_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rep_pic"
            app:layout_constraintTop_toBottomOf="@+id/yourRep" />

        <TextView
            android:id="@+id/repDistrict"
            style="@style/MainText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rep_district"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rep_pic"
            app:layout_constraintTop_toBottomOf="@+id/repName" />

        <TextView
            android:id="@+id/subhead2"
            style="@style/SubHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rep_subhead2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submitButton" />

        <TextView
            android:id="@+id/bio"
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rep_bio"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subhead2" />

        <TextView
            android:id="@+id/subhead3"
            style="@style/SubHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rep_subhead3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bio" />

        <TextView
            android:id="@+id/subhead1"
            style="@style/SubHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/rep_subhead1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rep_pic" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/submit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subhead1">

            <RadioButton
                android:id="@+id/approveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/approve" />

            <RadioButton
                android:id="@+id/disapproveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/disapprove" />

            <RadioButton
                android:id="@+id/indifferentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/indifferent" />
        </RadioGroup>

        <TextView
            android:id="@+id/vote_1_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/rep_vote_1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vote_1_graphic"
            app:layout_constraintTop_toBottomOf="@+id/subhead3" />

        <TextView
            android:id="@+id/vote_1_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rep_date_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vote_1_graphic"
            app:layout_constraintTop_toBottomOf="@+id/vote_1_name" />

        <ImageView
            android:id="@+id/vote_1_graphic"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/rep_vote_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subhead3"
            app:srcCompat="@drawable/green_check" android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/vote_2_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rep_vote_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vote_2_graphic"
            app:layout_constraintTop_toBottomOf="@+id/vote_1_graphic" />

        <TextView
            android:id="@+id/vote_2_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rep_date_2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vote_2_graphic"
            app:layout_constraintTop_toBottomOf="@+id/vote_2_name" />

        <ImageView
            android:id="@+id/vote_2_graphic"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/rep_vote_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vote_1_graphic"
            app:srcCompat="@drawable/red_x" />

        <TextView
            android:id="@+id/vote_3_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rep_vote_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vote_3_graphic"
            app:layout_constraintTop_toBottomOf="@+id/vote_2_graphic" />

        <TextView
            android:id="@+id/vote_3_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rep_date_3"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vote_3_graphic"
            app:layout_constraintTop_toBottomOf="@+id/vote_3_name" />

        <ImageView
            android:id="@+id/vote_3_graphic"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/rep_vote_3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vote_2_graphic"
            app:srcCompat="@drawable/red_x" android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/subhead4"
            style="@style/SubHeader"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/rep_subhead4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vote_3_date" />

        <TextView
            android:id="@+id/donate_description"
            style="@style/MainText"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rep_donate_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subhead4"
            android:layout_width="wrap_content" />

        <Button
            android:id="@+id/donateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rep_subhead4"
            android:background="@drawable/donate_button"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/donate_description" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
